--- a/style.css
+++ b/style.css
@@ -54,13 +54,17 @@ body {
 .flex-col {
   flex-direction: column;
 }
+h1,
+h2,
+.menu p,
+.selected-country p {
+  font-weight: 800;
+}
 h1 {
   font-size: clamp(1.8rem, 2.5vw, 2.8rem);
-  font-weight: 800;
 }
 h2 {
   font-size: clamp(1.6rem, 2vw, 2.2rem);
-  font-weight: 800;
   margin-bottom: 2rem;
 }
 p {
@@ -93,7 +97,7 @@ button:hover {
   cursor: pointer;
 }
 .container {
-  width: clamp(30rem, 90%, 130rem);
+  width: clamp(30rem, 90%, 120rem);
   margin-inline: auto;
 }
 /* nav section */
@@ -102,27 +106,24 @@ nav {
   top: 0;
   left: 0;
   width: 100%;
-  height: 8rem;
   background-color: var(--bg-box);
   opacity: 0.95;
   z-index: 15;
 }
+.nav,
 .nav-container {
-  justify-content: space-between;
   height: 8rem;
 }
-.menu {
-  width: clamp(10rem, 16vw, 14rem);
-  justify-content: flex-end;
+.nav-container {
+  justify-content: space-between;
 }
-.menu:hover {
+.menu {
+  width: clamp(12rem, 16vw, 13rem);
+  justify-content: flex-end;
   cursor: pointer;
 }
 .menu div {
-  flex: 1;
-}
-.menu p {
-  flex: 4;
+  flex: 0.8;
 }
 .menu div {
   position: relative;
@@ -137,25 +138,23 @@ nav {
   transform: translate(-50%, -50%);
 }
 .menu p {
-  font-weight: 500;
+  flex: 4;
   margin: 0;
-  text-align: right;
 }
 /* main container */
 /* input section */
 main {
-  padding-top: 12rem;
+  padding-top: 11rem;
 }
 .input-section {
   align-items: stretch;
   padding: 3rem 0;
-  gap: 3rem;
   opacity: 1;
   transition: opacity 600ms;
 }
 #input-search,
 #region {
-  padding: 1rem 2rem 1rem 4rem;
+  padding: 1.5rem 2rem 1.5rem 4rem;
   border: none;
   background-color: var(--bg-box);
   color: var(--txt-color);
@@ -166,19 +165,21 @@ main {
 #input-search::placeholder {
   color: var(--txt-color);
 }
-
+.input-section,
+.country-data,
+.country-box {
+  gap: 3rem;
+}
 .country-data {
   flex-wrap: wrap;
   justify-content: center;
-  gap: clamp(3rem, 3.5vw, 4rem);
   position: relative;
   z-index: 10;
 }
 .country-box {
   background-color: var(--bg-box);
-  width: 28rem;
+  width: 27.5rem;
   height: clamp(38rem, 40vw, 42rem);
-  gap: 3rem;
   align-items: flex-start;
 }
 .country-box:hover {
@@ -201,17 +202,17 @@ main {
 }
 /* Selected country */
 .selected-country {
-  min-height: 100vh;
+  width: 100%;
   z-index: 1;
   display: none;
+  padding: 5rem 0;
 }
 .btn-back,
-.selected-info div {
+.selected-info > div {
   margin-bottom: 5rem;
 }
-
 .selected-country > .flex {
-  gap: 10rem;
+  gap: clamp(5rem, 8vw, 10rem);
   align-items: flex-start;
 }
 .selected-country .flex .img-selected,
@@ -230,7 +231,6 @@ main {
 }
 .selected-country p {
   margin-bottom: 2rem;
-  font-weight: 800;
 }
 .selected-country p span {
   font-weight: 300;
@@ -260,29 +260,33 @@ main {
   display: none;
 }
 @media (min-width: 768px) {
+  .country-section {
+    justify-content: stretch;
+  }
   .flex-col {
     flex-direction: row;
   }
   .menu p {
     flex: 2;
   }
-  .country-data {
-    justify-content: center;
+  .menu div {
+    flex: 0.5;
   }
+  .country-data,
   .input-section {
     justify-content: space-between;
   }
   #input-search {
-    width: 50%;
+    width: 60%;
   }
   #region {
-    width: 20%;
+    width: 25%;
   }
   .country-box {
     flex-direction: column;
   }
   p.btn-border {
-    flex-direction: row;
+    flex-direction: column;
     margin-bottom: 0;
     align-items: flex-start;
   }
@@ -296,7 +300,9 @@ main {
   .selected-country > .flex {
     align-items: center;
   }
-  .selected-country {
-    top: 70%;
+}
+@media (min-width: 1024px) {
+  p.btn-border {
+    flex-direction: row;
   }
 }
