--- a/style.css
+++ b/style.css
@@ -181,6 +181,14 @@ main {
   width: 27.5rem;
   height: clamp(38rem, 40vw, 42rem);
   align-items: flex-start;
+  transform: translateY(8rem);
+  opacity: 0;
+  transition: all 1s;
+}
+.show {
+  transform: translateY(0);
+  opacity: 1;
+  transition: all 1s;
 }
 .country-box:hover {
   background-color: var(--bg-box-hover);
@@ -200,6 +208,9 @@ main {
 .country-info {
   padding: 0 3rem 3rem;
 }
+.country-info p span {
+  font-weight: 800;
+}
 /* Selected country */
 .selected-country {
   width: 100%;
@@ -208,11 +219,11 @@ main {
   padding: 5rem 0;
 }
 .btn-back,
-.selected-info > div {
+.selected-info > div > div {
   margin-bottom: 5rem;
 }
 .selected-country > .flex {
-  gap: clamp(5rem, 8vw, 10rem);
+  gap: clamp(6rem, 6.5vw, 8rem);
   align-items: flex-start;
 }
 .selected-country .flex .img-selected,
@@ -240,8 +251,8 @@ main {
   width: 100%;
   height: 100%;
 }
-.btn-border {
-  align-items: flex-start;
+.btn-border span button {
+  margin: 0 0 1rem 1rem;
 }
 .btn-border span:first-child {
   font-weight: 800;
@@ -259,12 +270,18 @@ main {
 .hide-country {
   display: none;
 }
+
 @media (min-width: 768px) {
   .country-section {
     justify-content: stretch;
   }
+
+  .country-all-info div,
+  .country-all-info p {
+    flex: 1;
+  }
   .flex-col {
-    flex-direction: row;
+    flex-direction: column;
   }
   .menu p {
     flex: 2;
@@ -272,23 +289,21 @@ main {
   .menu div {
     flex: 0.5;
   }
-  .country-data,
+  .country-data {
+    justify-content: center;
+  }
   .input-section {
+    flex-direction: row;
     justify-content: space-between;
   }
   #input-search {
-    width: 60%;
+    width: 40%;
   }
   #region {
     width: 25%;
   }
-  .country-box {
-    flex-direction: column;
-  }
   p.btn-border {
-    flex-direction: column;
     margin-bottom: 0;
-    align-items: flex-start;
   }
   .btn-border span:first-child {
     flex: 1;
@@ -300,9 +315,28 @@ main {
   .selected-country > .flex {
     align-items: center;
   }
+  .country-all-info {
+    flex-direction: row;
+  }
+  .selected-info > div > div {
+    margin-bottom: 0;
+    width: 100%;
+  }
 }
 @media (min-width: 1024px) {
-  p.btn-border {
+  .country-data {
+    justify-content: space-between;
+  }
+  .selected-country > .flex {
+    flex-direction: row;
+  }
+  .selected-info > div > div {
+    margin-bottom: 5rem;
+  }
+  .country-all-info {
+    flex-direction: column;
+  }
+  .country-all-info div.flex {
     flex-direction: row;
   }
 }
