--- a/style.css
+++ b/style.css
@@ -183,12 +183,12 @@ main {
   align-items: flex-start;
   transform: translateY(8rem);
   opacity: 0;
-  transition: all 1s;
+  transition: transform 1s, opacity 1s;
 }
 .show {
   transform: translateY(0);
   opacity: 1;
-  transition: all 1s;
+  transition: transform 1s, opacity 1s;
 }
 .country-box:hover {
   background-color: var(--bg-box-hover);
